--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 asgiref==3.2.10
+dj-database-url==0.5.0
 Django==3.1
 django-crispy-forms==1.14.0
+django-heroku==0.3.1
 gunicorn==20.1.0
 Pillow==9.1.0
+psycopg2==2.9.3
 pytz==2022.1
 sqlparse==0.4.2
+whitenoise==6.1.0
